--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "npm run docs:dev",
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "deploy": "sh ./deploy.sh"
   },
   "devDependencies": {
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
